--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 0.5.0
 repository: https://github.com/fluttercommunity/flutter_google_places
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  google_api_headers: ^3.8.0
+  google_api_headers: ^3.8.4
   google_maps_webservice: ^0.0.20-nullsafety.5
-  http: ^0.13.4
+  http: ">=0.13.4 <2.0.0"
   rxdart: ^0.27.7
 
 dev_dependencies:
